src/yini_test/cases/golden/strict/valid/lists/list-single-item.strict.yini
@yini strict

^ Lists
items = [42]

/END

