src/yini_test/cases/golden/strict/invalid/numbers/malformed-exponent-no-digits.strict.yini
@yini strict

^ Numbers
val = 1e

/END

